tests/char_set/char_set.exp
Error ----------------------------------------------------------------------------------------------------- test.js:14:3

Cannot cast `'aaaa'` to character set `ab` because string literal `aaaa` [1] is incompatible with character set `ab` [2]
since `a` is duplicated. [invalid-charset-type-arg]

   test.js:14:3
   14|   'aaaa' as $CharSet<'ab'>; // error
         ^^^^^^ [1]

References:
   test.js:14:13
   14|   'aaaa' as $CharSet<'ab'>; // error
                   ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

Cannot cast `'c'` to character set `ab` because string literal `c` [1] is incompatible with character set `ab` [2] since
`c` is not a member of the set. [invalid-charset-type-arg]

   test.js:15:3
   15|   'c' as $CharSet<'ab'>; // error
         ^^^ [1]

References:
   test.js:15:10
   15|   'c' as $CharSet<'ab'>; // error
                ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:3

Cannot cast `'ac'` to character set `ab` because string literal `ac` [1] is incompatible with character set `ab` [2]
since `c` is not a member of the set. [invalid-charset-type-arg]

   test.js:16:3
   16|   'ac' as $CharSet<'ab'>; // error
         ^^^^ [1]

References:
   test.js:16:11
   16|   'ac' as $CharSet<'ab'>; // error
                 ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:3

Cannot call `g` with `'abcd'` bound to `x` because string literal `abcd` [1] is incompatible with `C$flags` [2] since
`c` is not a member of the set and `d` is not a member of the set. [invalid-charset-type-arg]

   test.js:22:3
   22| g('abcd');
         ^^^^^^ [1]

References:
   test.js:3:16
    3| type C$flags = $CharSet<'ab'>;
                      ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:25:3

Cannot cast `x` to string literal `foo` because string [1] is incompatible with string literal `foo` [2].
[incompatible-cast]

   test.js:25:3
   25|   x as 'foo';
         ^

References:
   test.js:24:15
   24| function h(x: $CharSet<'ab'>) {
                     ^^^^^^^^^^^^^^ [1]
   test.js:25:8
   25|   x as 'foo';
              ^^^^^ [2]



Found 5 errors
